cloudinary cloud setup

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,15 @@
 
 .heading{
   font-weight: 100,
-  font-size: 4cm,
+  font-size: 4cm;
   text-shadow: 1px 1px 5px black;
 }
 img {
-  height: 90%,
+  height: 90%;
   width: 100%;
 }
 .text{
-  font-size: 32 px,
+  font-size: 32px;
   font-style: italic;
 }
     </style>
